Revise title and add courses and contact details
Updated the title and added course and contact information.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DataNautIQ Training</title>
+  <title>DataNautIQ – EdTech Training</title>
+  <meta charset="UTF-8">
 </head>
 <body>
   <h1>Welcome to DataNautIQ</h1>
   <p>Data Engineering | Azure | Databricks</p>
+
+  <h2>Courses</h2>
+  <ul>
+    <li>Data Engineering Foundations</li>
+    <li>Azure Data Engineer</li>
+    <li>Databricks & Lakehouse</li>
+  </ul>
+
+  <h2>Contact</h2>
+  <p>Email: datanautiq@gmail.com</p>
 </body>
 </html>
+
